implementados cambios en spec 002
